--- a/_config.yml
+++ b/_config.yml
@@ -1,13 +1,13 @@
-title: "Advik Singhania"
-email: adviksinghania@gmail.com
+title: "Hamza Jermouni"
+email: hjermouni2006@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
   Write an awesome description for your new site here. You can edit this
   line in _config.yml. It will appear in your document head meta (for
   Google search results) and in your feed.xml site description.
 baseurl: "/" 
-url: "https://adviksinghania.github.io/" 
-twitter_username: SinghaniaAdvik
-github_username:  adviksinghania
+url: "https://jermouni.netlify.app" 
+twitter_username: HmzJer
+github_username:  hamzajer
 
 sass:
   sass_dir: _sass
